1-web/jenkins.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins
  namespace: devops-tools
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - jenkins.cocdev.co.kr
    secretName: jenkins-tls
  rules:
  - host: jenkins.cocdev.co.kr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jenkins-service 
            port:
              number: 8080
