1-web/pg-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin 
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - pgadmin.wallyops.com
    secretName: web-app-tls
  rules:
  - host: pgadmin.wallyops.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pg-cluster-pgadmin4
            port:
              number: 5432
